--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -54,13 +54,18 @@ jobs:
 
       - name: Download Dockerrun.aws.json from S3
         run: aws s3 cp s3://siridjango/dockerrun.json .
+
       - name: Deploy to Elastic Beanstalk
         run: |
+          sed -i "s/\${IMAGE_TAG}/v${GITHUB_RUN_NUMBER}/" dockerrun.json
+          aws elasticbeanstalk create-application-version \
+            --application-name satya \
+            --version-label "v${GITHUB_RUN_NUMBER}" \
+            --source-bundle S3Bucket=siridjango,S3Key=dockerrun.json
           aws elasticbeanstalk update-environment \
             --application-name satya \
             --environment-name Satya-env \
-            --version-label "v${GITHUB_RUN_NUMBER}" \
-            --source-bundle S3Bucket=s3://siridjango/dockerrun.json,S3Key=Dockerrun.aws.json
+            --version-label "v${GITHUB_RUN_NUMBER}"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
