--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -44,12 +44,10 @@ jobs:
           SUPERUSER_PASSWORD: ${{ secrets.SUPERUSER_PASSWORD }}
 
       - name: Build, tag, and push image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: python-repo
-          IMAGE_TAG: sample-image
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 571888835380.dkr.ecr.us-east-1.amazonaws.com
+          docker build -t python-repo .
+          docker tag python-repo:latest 571888835380.dkr.ecr.us-east-1.amazonaws.com/python-repo:latest
+          docker push 571888835380.dkr.ecr.us-east-1.amazonaws.com/python-repo:latest
 
     
