--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -1,4 +1,4 @@
-name: Build, Push to ECR, and Deploy to Elastic Beanstalkss
+name: Build, Push to ECR, and Deploy to Elastic Beanstalks
 
 on:
   push:
