--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -37,6 +37,9 @@ jobs:
         run: |
           python manage.py delete_superusers
           echo"successfull deletion"
+        env:
+          DJANGO_SETTINGS_MODULE: isana_pro.settings
+
          # echo "from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.filter(username='${{ secrets.SUPERUSER_NAME }}').exists() or User.objects.create_superuser('${{ secrets.SUPERUSER_NAME }}', '${{ secrets.SUPERUSER_EMAIL }}', '${{ secrets.SUPERUSER_PASSWORD }}')" | python manage.py shell
         #env:
          # SUPERUSER_NAME: ${{ secrets.SUPERUSER_NAME }}
